# pdf-workbench

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  THIRD_PARTY.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/desktop/: README.md
crates/document-core/: Cargo.toml
crates/document-core/src/: lib.rs
crates/pdfium-adapter/: Cargo.toml
crates/pdfium-adapter/src/: lib.rs
crates/qpdf-adapter/: Cargo.toml
crates/qpdf-adapter/src/: lib.rs
crates/qpdf-adapter/tests/: native_check.rs
docs/: architecture.md  compatibility.md  product-scope.md  qpdf-integration.md  roadmap.md
docs/adr/: 0001-licensing-and-repository-boundaries.md  0002-pdf-engine-boundaries.md  0003-local-first-process-model.md
docs/security/: threat-model.md
scripts/: build-qpdf.ps1
